[gd_scene load_steps=4 format=3 uid="uid://clf77pvuvpr6c"]

[ext_resource type="Script" path="res://MainScript.gd" id="1_320vk"]
[ext_resource type="PackedScene" uid="uid://w5kbguyafcqp" path="res://GUI/MainMenu.tscn" id="2_4v00h"]
[ext_resource type="PackedScene" uid="uid://ba4x5167abphj" path="res://Interface/Interface.tscn" id="3_ari5s"]

[node name="Main" type="Node2D"]
script = ExtResource("1_320vk")

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Player" type="Node" parent="."]

[node name="MainMenu" parent="." instance=ExtResource("2_4v00h")]

[node name="Map" type="Node2D" parent="."]
z_index = -1

[node name="DebugTimer" type="Timer" parent="."]
autostart = true

[node name="Interface" parent="." instance=ExtResource("3_ari5s")]
visible = false

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
[connection signal="startGame" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="timeout" from="DebugTimer" to="." method="_on_debug_timer_timeout"]
